--- a/src/content/docs/en/tutorial/1-setup/3.mdx
+++ b/src/content/docs/en/tutorial/1-setup/3.mdx
@@ -34,7 +34,7 @@ import { Steps } from '@astrojs/starlight/components';
         <meta charset="utf-8" />
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <meta name="viewport" content="width=device-width" />
-        <meta name="generator" content={Astro.generator} >
+        <meta name="generator" content={Astro.generator} />
         <title>Astro</title>
       </head>
       <body>
